Change breakpoint to prevent header for wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -36,14 +36,14 @@ a:hover {
     align-items: center;
 }
 
-@media screen and (max-width: 499px) {
+@media screen and (max-width: 719px) {
     .content {
         width: 80%;
         max-width: 80%;
     }
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 720px) {
     .content {
         width: 33%;
         max-width: 33%;
